feature/block_5: Pdict used in ISML tags

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
         "vars-on-top": "off",
         "global-require": "off",
         "no-shadow": ["error", { "allow": ["err", "callback"]}],
-        "max-len": "off"
+        "max-len": "off",
+        "linebreak-style": "off"
     },
     "parserOptions": {
         "ecmaVersion": 2017
